# covid19-visualization-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
covid19_visualization_pipeline/: config.py  dataset.py  plots.py
data/raw/: compact.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1-EDA.ipynb
