[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "covid19_visualization_pipeline"
version = "0.0.1"
description = "End-to-end ETL (Extract, Transform, Load) pipeline on global COVID-19 data, sourced from Our World in Data."
authors = [
  { name = "Eneru" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "plotly>=6.2.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["covid19_visualization_pipeline"]
include = ["pyproject.toml", "covid19_visualization_pipeline/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["covid19_visualization_pipeline"]
force-sort-within-sections = true

